<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:gravity="center" >
    
    
    
	<LinearLayout
	    android:id="@+id/prefdummy1"
	    android:layout_weight="1"
	    android:layout_width="0dp"
	    android:layout_height="match_parent" />
	    
	<LinearLayout
	    android:id="@+id/prefWrapper"
	    android:background="#202020"
	    android:padding="40dp"
	    android:layout_weight="3"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="vertical" >
	
	
       <TextView
           android:id="@+id/diffTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/prefDiff"
           android:gravity="center"
           android:padding="10dp"
           android:textSize="30dp"
           android:layout_weight="1"
           android:textAppearance="?android:attr/textAppearanceLarge" />
	        
	    <LinearLayout
	        android:id="@+id/diffWrapper"
	        android:weightSum="3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	
	        <TextView
	            android:id="@+id/easyTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/prefEasy"
	            android:gravity="left"
	            android:layout_weight="1"
	            android:padding="10dp"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <TextView
	            android:id="@+id/mediumTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/prefMedium"
	            android:gravity="center"
	            android:layout_weight="1"
	            android:padding="10dp"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <TextView
	            android:id="@+id/hardTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/prefHard"
	            android:gravity="right"
	            android:padding="10dp"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    </LinearLayout>
	
	    <SeekBar
	        android:id="@+id/difficulty"
	        android:max="100"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/timeTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="20dp"
	        android:text="@string/prefTime"
	        android:gravity="left"
	        android:padding="10dp"
	        android:textSize="30dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <ToggleButton
	        android:id="@+id/prefTime"
	        android:layout_width="230dp"
	        android:layout_height="50dp"
	        android:textSize="25dp"
	        android:textOn="@string/yes"
	        android:textOff="@string/no" />
	
	    <TextView
	        android:id="@+id/googleTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="20dp"
	        android:text="@string/prefGoogle"
	        android:gravity="left"
	        android:padding="10dp"
	        android:textSize="30dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <ToggleButton
	        android:id="@+id/prefGoogle"
	        android:layout_width="230dp"
	        android:layout_height="50dp"
	        android:textSize="25dp"
	        android:textOn="@string/yes"
	        android:textOff="@string/no" />

	    <LinearLayout
	        android:id="@+id/saveWrapper"
	        android:paddingTop="60dp"
	        android:gravity="center"
	        android:weightSum="2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	        
			<LinearLayout
			    android:id="@+id/prefdummy3"
			    android:layout_weight="1"
			    android:layout_width="0dp"
			    android:layout_height="match_parent" >
			    
		        <Button
		            android:id="@+id/prefSave"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		        	android:textSize="30dp"
		            android:layout_gravity="left"
		            android:onClick="savePrefs"
		            android:text="@string/save" />
		        
			</LinearLayout>
	        
			<LinearLayout
			    android:id="@+id/prefdummy4"
			    android:layout_weight="1"
			    android:layout_width="0dp"
			    android:gravity="right"
			    android:layout_height="match_parent" >
			    
		        <Button
		            android:id="@+id/prefCancel"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		        	android:textSize="30dp"
		            android:layout_gravity="right"
		            android:onClick="closeActivity"
		            android:text="@string/cancel" />
		        
			</LinearLayout>
	
	    </LinearLayout>
	
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/prefdummy2"
	    android:layout_weight="1"
	    android:layout_width="0dp"
	    android:layout_height="match_parent" />
</LinearLayout>